--- a/ChannelAdvisorDeveloperAuth/App.config
+++ b/ChannelAdvisorDeveloperAuth/App.config
@@ -3,4 +3,19 @@
     <startup>
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.1" />
     </startup>
+    <system.serviceModel>
+        <bindings>
+            <basicHttpBinding>
+                <binding name="AdminServiceSoap">
+                    <security mode="Transport" />
+                </binding>
+                <binding name="AdminServiceSoap1" />
+            </basicHttpBinding>
+        </bindings>
+        <client>
+            <endpoint address="https://api.channeladvisor.com/ChannelAdvisorAPI/v7/AdminService.asmx"
+                binding="basicHttpBinding" bindingConfiguration="AdminServiceSoap"
+                contract="ChannelAdvisorAdminService.AdminServiceSoap" name="AdminServiceSoap" />
+        </client>
+    </system.serviceModel>
 </configuration>
