--- a/ChannelAdvisorDeveloperAuth/ChannelAdvisorDeveloperAuth.csproj
+++ b/ChannelAdvisorDeveloperAuth/ChannelAdvisorDeveloperAuth.csproj
@@ -34,6 +34,8 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.ServiceModel" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -42,11 +44,53 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Connected Services\ChannelAdvisorAdminService\Reference.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="Connected Services\ChannelAdvisorAdminService\AdminService.wsdl" />
+    <None Include="Connected Services\ChannelAdvisorAdminService\ChannelAdvisorDeveloperAuth.ChannelAdvisorAdminService.APIResultOfArrayOfAuthorizationResponse.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
+    <None Include="Connected Services\ChannelAdvisorAdminService\ChannelAdvisorDeveloperAuth.ChannelAdvisorAdminService.APIResultOfBoolean.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
+    <None Include="Connected Services\ChannelAdvisorAdminService\ChannelAdvisorDeveloperAuth.ChannelAdvisorAdminService.APIResultOfString.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
+    <None Include="Connected Services\ChannelAdvisorAdminService\ChannelAdvisorDeveloperAuth.ChannelAdvisorAdminService.GetAuthorizationListResponse.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
+    <None Include="Connected Services\ChannelAdvisorAdminService\ChannelAdvisorDeveloperAuth.ChannelAdvisorAdminService.PingResponse.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
+    <None Include="Connected Services\ChannelAdvisorAdminService\ChannelAdvisorDeveloperAuth.ChannelAdvisorAdminService.RequestAccessResponse.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Connected Services\" />
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadataStorage Include="Connected Services\ChannelAdvisorAdminService\" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Connected Services\ChannelAdvisorAdminService\configuration91.svcinfo" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Connected Services\ChannelAdvisorAdminService\configuration.svcinfo" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Connected Services\ChannelAdvisorAdminService\Reference.svcmap">
+      <Generator>WCF Proxy Generator</Generator>
+      <LastGenOutput>Reference.cs</LastGenOutput>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
