--- a/ChannelAdvisorDeveloperAuth/App.config
+++ b/ChannelAdvisorDeveloperAuth/App.config
@@ -1,21 +1,19 @@
-<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <startup>
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.1" />
+        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.1"/>
     </startup>
     <system.serviceModel>
         <bindings>
             <basicHttpBinding>
                 <binding name="AdminServiceSoap">
-                    <security mode="Transport" />
+                    <security mode="Transport"/>
                 </binding>
-                <binding name="AdminServiceSoap1" />
+                <binding name="AdminServiceSoap1"/>
             </basicHttpBinding>
         </bindings>
         <client>
-            <endpoint address="https://api.channeladvisor.com/ChannelAdvisorAPI/v7/AdminService.asmx"
-                binding="basicHttpBinding" bindingConfiguration="AdminServiceSoap"
-                contract="ChannelAdvisorAdminService.AdminServiceSoap" name="AdminServiceSoap" />
+            <endpoint address="https://api.channeladvisor.com/ChannelAdvisorAPI/v7/AdminService.asmx" binding="basicHttpBinding" bindingConfiguration="AdminServiceSoap" contract="ChannelAdvisorAdminService.AdminServiceSoap" name="AdminServiceSoap"/>
         </client>
     </system.serviceModel>
 </configuration>
